Fix title truncation: add flex: 1 to constrain width

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -280,6 +280,7 @@ figcaption {
   white-space: nowrap;
   text-overflow: ellipsis;
   min-width: 0;
+  flex: 1;
 }
 
 .writing-list .post-meta {
